...
        tools:layout="@layout/comment_fragment">
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/artistFragment"
        android:name="com.example.vinyls_jetpack_application.ui.ArtistFragment"
        android:label="Artists"
        tools:layout="@layout/artist_fragment">
        <action
            android:id="@+id/action_artistFragment_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
...
